--- a/HTML_Lab1/Task_1/Task1.html
+++ b/HTML_Lab1/Task_1/Task1.html
@@ -1,12 +1,14 @@
-﻿@page
-@model HTML_Tasks.Pages.Task1Model
-@{
-    ViewData["Title"] = "Task 1";
-}
-
-<h1>Task 1</h1>
-<hr />
-<form method="post" enctype="multipart/form-data">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Task 1</title>
+</head>
+<body>
+    <h1>Task 1</h1>
+    <hr>
+	<form method="post" enctype="multipart/form-data" class="form-group">
     <label for="fullname">Write your full name</label><br />
     <input type="text" maxlength="30" id="fullname" name="fullname" pattern="(^[A-Za-z]{3,16})([ ]{1})([A-Za-z]{3,16})" placeholder="Edard Stark" required /><br />
 
@@ -18,13 +20,13 @@
     </select><br />
 
     <label for="birthday">Birthday:</label><br />
-    <input type="date" id="birthday" name="birthday" max="@DateTime.Now.AddYears(-18).ToString("yyyy-MM-dd")" required><br />
+    <input type="date" id="birthday" name="birthday" max="2005-02-27" required><br />
 
     <label for="email">Enter your email:</label><br />
     <input type="email" id="email" name="email" pattern="^([a-zA-Z0-9_\-\.]+)@@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required><br />
 
     <label for="phone">Enter your phone number:</label><br />
-    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="096-111-11-11" required><br />
+    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="096-111-11-11" required><br/>
 
     <label for="favcolor">Select the desired background color:</label><br />
     <input type="color" id="favcolor" name="favcolor" required><br />
@@ -47,12 +49,13 @@
     <textarea id="comment" name="comment" rows="7" cols="25" placeholder="You can leave your comment here"></textarea><br />
 
    <div class="form-group">
-   <label asp-for="FileUpload.FormFile" class="control-label">Choose picture for your profile</label>
-   <input asp-for="FileUpload.FormFile" class="form-control" type="file" accept=".png" />
-   <span asp-validation-for="FileUpload.FormFile" class="text-danger"></span>
+   <label for="avatar" class="control-label">Choose picture for your profile</label><br />
+   <input id="avatar" class="form-control" type="file" accept=".png" />
    </div><br />
 
     <input type="Submit" id="submit" value="Submit" />
     <input type="reset" id="reset" value="Clear" />
 
 </form>
+</body>
+</html>
