--- a/HTML_Lab1/Task_3/Task3.html
+++ b/HTML_Lab1/Task_3/Task3.html
@@ -1,17 +1,15 @@
-﻿@page
-@model HTML_Tasks.Pages.Tasks.Task3Model
-@{
-    ViewData["Title"] = "Task 3";
-}
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Task 3</title>
 </head>
 <body>
-    <h1>Task 3</h1>
+	<h1>Task 3</h1>
     <hr />
     <div class="Full teacher's card">
-        <table align="center" class="table table-striped" data-color="pink">
+        <table border="thead-dark" class="table table-bordered" data-color="pink">
             <thead class="thead-dark">
                 <tr>
                 <th colspan="8" class="text-center">Full teacher's card</th>
@@ -29,10 +27,10 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Natalia Lenko</td>
-                    <td>Female</td>
-                    <td>46</td>
-                    <td>lenko@gmail.com</td>
+                    <td>Pershko Vladyslav</td>
+                    <td>Male</td>
+                    <td>18</td>
+                    <td>pershko@gmail.com</td>
                     <td>096-123-45-67</td>
                     <td>Ukraine</td>
                     <td>Ovruch</td>
@@ -43,3 +41,4 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39892.34803214278!2d28.773060616074304!3d51.324521278877114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472987f8b974aae1%3A0xc133be32ddf9c30a!2sOvruch%2C%20Zhytomyr%20Oblast%2C%20Ukraine%2C%2011101!5e0!3m2!1sen!2suk!4v1677496924666!5m2!1sen!2suk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </body>
+</html>
