--- a/HTML_Lab1/Task_2/Task2.html
+++ b/HTML_Lab1/Task_2/Task2.html
@@ -6,15 +6,19 @@
 	<title>Task 2</title>
 </head>
 <body>
-	<h1>Task 2</h1>
-    <hr>
-    <div class="compact-card">
-    <h4>Compact Teacher Card</h4>
-    <table>
-        <caption> <strong>Vladyslav Pershko</strong></caption>
-        <tr> <img src="D:\Study\KPI\MyFoto.jpg" alt="My photo should have been here" width="200" height="200" /></tr>
-    </table>
-    </div>
-    <a href="D:\Study\KPI\Programming\HTML_Tasks\Task_3\Task3.html" target="_blank">More details</a>
+    <section> 
+        <header>
+         <h1>Compact Teacher Card</h1>
+         <p>Published by Vladyslav Pershko on March 9, 2023</p>
+     </header>
+     <figure style="display: inline-block;">
+      <img src="../Images/MyFoto.jpg" alt="The teacher's foto should have been here." width="200" height="200">
+      <figcaption style="text-align: center;">Vladyslav Pershko<br>Programming</figcaption>
+  </figure>
+  <details>
+      <summary class="control-label">More details</summary>
+      <a href="../Task_3/Task3.html" target="_blank">Full teacher's card</a>
+  </details>
+</section>
 </body>
 </html>
