--- a/HTML_Lab1/Task_1/Task1.html
+++ b/HTML_Lab1/Task_1/Task1.html
@@ -9,30 +9,31 @@
     <h1>Task 1</h1>
     <hr>
 	<form method="post" enctype="multipart/form-data" class="form-group">
-    <label for="fullname">Write your full name</label><br />
-    <input type="text" maxlength="30" id="fullname" name="fullname" pattern="(^[A-Za-z]{3,16})([ ]{1})([A-Za-z]{3,16})" placeholder="Edard Stark" required /><br />
+    <label for="fullname">Write your full name</label><br>
+    <input type="text" maxlength="30" id="fullname" name="fullname" pattern="(^[A-Za-z]{3,16})([ ]{1})([A-Za-z]{3,16})" placeholder="Edard Stark" required><br>
 
-    <label for="sexes">Choose a sex:</label><br />
+    <label for="sexes">Choose a sex:</label><br>
     <select id="sexes" name="sexes" required>
-        <option value="notdefined">Not defined</option>
+        <option value="" disabled selected>Select your option</option>
         <option value="male">Male</option>
         <option value="female">Female</option>
-    </select><br />
+    </select><br>
 
-    <label for="birthday">Birthday:</label><br />
-    <input type="date" id="birthday" name="birthday" max="2005-02-27" required><br />
+    <label for="birthday">Birthday:</label><br>
+    <input type="date" id="birthday" name="birthday" max="2005-02-27" required><br>
 
-    <label for="email">Enter your email:</label><br />
-    <input type="email" id="email" name="email" pattern="^([a-zA-Z0-9_\-\.]+)@@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required><br />
+    <label for="email">Enter your email:</label><br>
+    <input type="email" id="email" name="email" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required><br>
 
-    <label for="phone">Enter your phone number:</label><br />
-    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="096-111-11-11" required><br/>
+    <label for="phone">Enter your phone number:</label><br>
+    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="096-111-11-11" required><br>
 
-    <label for="favcolor">Select the desired background color:</label><br />
-    <input type="color" id="favcolor" name="favcolor" required><br />
+    <label for="favcolor">Select the desired background color:</label><br>
+    <input type="color" id="favcolor" name="favcolor"><br>
 
-    <label for="countries">Select or write your country:</label><br />
-    <input list="countries" name="countries" min="2" pattern="^[a-zA-Z]+$" required><br />
+    <label>Select or write your country:<br>
+    <input type="text" list="countries" name="countries" minlength="2" pattern="^[a-zA-Z]+$" required>
+</label>
     <datalist id="countries">
         <option value="Ukraine"></option>
         <option value="Poland"></option>
@@ -40,21 +41,21 @@
         <option value="US"></option>
         <option value="Germany"></option>
         <option value="France"></option>
-    </datalist>
+    </datalist><br>
 
-    <label for="city">Write your city: </label><br />
-    <input type="text" id="city" name="city" min="2" pattern="^[a-zA-Z]+$" required><br />
+    <label for="city">Write your city: </label><br>
+    <input type="text" id="city" name="city" minlength="2" pattern="^[a-zA-Z]+$" required><br>
 
-    <label for="comment">Leave comment if you want:</label><br />
-    <textarea id="comment" name="comment" rows="7" cols="25" placeholder="You can leave your comment here"></textarea><br />
+    <label for="comment">Leave comment if you want:</label><br>
+    <textarea id="comment" name="comment" rows="7" cols="25" placeholder="You can leave your comment here"></textarea><br>
 
-   <div class="form-group">
-   <label for="avatar" class="control-label">Choose picture for your profile</label><br />
-   <input id="avatar" class="form-control" type="file" accept=".png" />
-   </div><br />
+   <span class="picture">
+   <label for="avatar" class="control-label">Choose picture for your profile</label><br>
+   <input id="avatar" class="form-control" type="file" accept=".png">
+   </span><br>
 
-    <input type="Submit" id="submit" value="Submit" />
-    <input type="reset" id="reset" value="Clear" />
+    <input type="Submit" id="submit" value="Submit">
+    <input type="reset" id="reset" value="Clear">
 
 </form>
 </body>
