--- a/HTML_Lab1/Task_4/Task4.html
+++ b/HTML_Lab1/Task_4/Task4.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	 <h1>Task 4</h1>
-    <hr />
-    <table border="thead-dark">
-        <thead class="thead-dark">
+    <hr>
+    <table>
+        <thead>
             <tr>
                 <th colspan="4" class="text-center h2">Statisticaly table</th>
             </tr>
@@ -20,7 +20,7 @@
                 <th>Country</th>
             </tr>
             </thead>
-            <tbody class="text-body">
+            <tbody>
                 <tr>
                     <td>1</td>
                     <td>25</td>
