do some changes

--- a/HTML_CSS_Lab2/Index.html
+++ b/HTML_CSS_Lab2/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normilize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/form-popup.css">
+    <link rel="stylesheet" type="text/css" href="css/popups.css">
     <title>Lab 2</title>
 </head>
 <body>
@@ -13,7 +13,9 @@
     <div class="container">
         <h1 class="header-title">Teachinder</h1>
         <form action="#" class="header-form">
-            <input class="header-input" type="text" placeholder="Name, note or age to search">
+            <label>
+                <input class="header-input" type="text" placeholder="Name, note or age to search">
+            </label>
             <button class="submit-btn" type="submit">Search</button>
         </form>
         <nav class="header-nav">
@@ -291,12 +293,12 @@
                         <h3 class="card-last-name">Clark</h3>
                         <p class="country">China</p>
                     </li>
-<!--                    <li class="card-navigation prev">-->
-<!--                        <a href="#"><img class="navigation" src="./Images/less.png" alt="undo"></a>-->
-<!--                    </li>-->
-<!--                    <li class="card-navigation next">-->
-<!--                        <a href="#"><img class="navigation" src="./Images/less.png" alt="undo"></a>-->
-<!--                    </li>-->
+                    <!--                    <li class="card-navigation prev">-->
+                    <!--                        <a href="#"><img class="navigation" src="./Images/less.png" alt="undo"></a>-->
+                    <!--                    </li>-->
+                    <!--                    <li class="card-navigation next">-->
+                    <!--                        <a href="#"><img class="navigation" src="./Images/less.png" alt="undo"></a>-->
+                    <!--                    </li>-->
                 </ul>
             </div>
         </div>
@@ -458,11 +460,9 @@
                     <a id="a-phone" class="phone" href="tel:0961111111">+38-096-111-11-11</a>
                 </div>
             </div>
-            <p id="p-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, amet at eligendi enim expedita
-                harum
-                id illo maiores minima minus mollitia nesciunt nostrum, nulla officia optio possimus recusandae
-                sapiente
-                tenetur.
+            <p id="p-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, amet at eligendi enim
+                expedita harum id illo maiores minima minus mollitia nesciunt nostrum, nulla officia optio possimus
+                recusandae sapiente tenetur.
             </p>
             <a id="a-map" class="map" href="https://goo.gl/maps/sTBq9svGgWiCzo1h8" target="_blank">toggle map</a>
         </div>
